src/objects/AlumniRelations__c.object
<CustomObject>
    <description>This object allows the Alumni Services team to track all email interactions  and sessions pertaining to Students and mentors and related to Services provided</description>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollegeDegree__c</fullName>
        <label>College/Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA - IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA - Healthcare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogACall__c</fullName>
        <formula>HYPERLINK(&quot;/00T/e?title=Call&amp;what_id=&quot;&amp;Id&amp;&quot;&amp;followup=1&amp;tsk5=Call&amp;RecordType=01230000000c59X&amp;ent=Task&amp;p2_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=/&quot;&amp;Id,IMAGE( 
&quot;/servlet/servlet.ImageServer?id=015a00000023DzU&amp;oid=00Df0000002MhY1&amp;lastMod=1369231472000&quot;,&quot;Log A Call&quot;),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log A Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RecordStatus__c</fullName>
        <label>Record Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SendQuickEmail__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/core/email/author/EmailAuthor?p3_lkid=&quot;&amp;Id&amp;&quot;&amp;p2_lkid=&quot;&amp;Student__r.Id&amp;&quot;&amp;p4=&quot;&amp;Student__r.Mentor__r.Email&amp;&quot;&amp;p24=&quot;&amp;Student__r.OtherEmail__c&amp; 
&quot;&amp;p26=alumni@wgu.edu&amp;retURL=/&quot;&amp;Id,IMAGE(&quot;/servlet/servlet.ImageServer?id=015a00000023DzZ&amp;oid=00Df0000002MhY1&amp;lastMod=1369231498000&quot;,&quot;Send Email&quot;),&quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SendQuickEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentEmail__c</fullName>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>Student ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Alumni_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alumni Relations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AlumniRelationsAll</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>StudentID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>AlumniRelations__c.AlumniRelations</value>
        </filters>
        <label>Alumni Relations All</label>
        <sharedTo>
            <group>AlumniRelationship</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AS# {0000}</displayFormat>
        <label>Alumni Interaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Relations</pluralLabel>
    <recordTypes>
        <fullName>AlumniRelations</fullName>
        <active>true</active>
        <label>Alumni Relations</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>